Added 'avaiability board' (low stock/out of stock) and preliminary kitchen display UI
